[WIP] #4597 Java 17 support